# review-genie

./: .pre-commit-config.yaml  api.http  compose.yaml
.cursor/rules/: backend.mdc
.devcontainer/: compose.yaml  devcontainer.json  post-create.sh
.github/workflows/: test.yml
backend/: .dockerignore  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
backend/adapters/outbound/persistence/sqlalchemy/: __init__.py  models.py
backend/adapters/outbound/persistence/sqlalchemy/mappers/: __init__.py  project_mapper.py
backend/application/commands/: commands.py
backend/application/commands/handlers/: create_project_command_handler.py
backend/bootstrap/: __init__.py  settings.py  web_app.py
backend/bootstrap/db/: env.py
backend/docs/: glossary.md
backend/domain/: entity.py  event.py  exception.py  ports.py  specifications.py
backend/domain/ports/: __init__.py  repositories.py
backend/domain/ports/specifications/: __init__.py  project_already_exists.py  specification.py
backend/domain/project/: aggregate.py
backend/domain/project/exceptions/: __init__.py  empty_repository_id.py  empty_rule.py  invalid_owner_format.py  invalid_project_identifier_format.py  invalid_repository_id_format.py  invalid_url_format.py  project_already_exists.py  remote_repository_does_not_exist.py  unsupported_provider.py
backend/domain/project/factories/: __init__.py  policies.py  project.py  value_objects_factory.py
backend/domain/project/ports/: __init__.py  verify_remote_repository_existence.py
backend/domain/project/services/: __init__.py  create_project_service.py
backend/domain/project/value_objects/: __init__.py  owner.py  policies.py  project_id.py  provider.py  repo_id.py  rules.py  url.py
backend/src/: README.md  main.py  mypy.ini  pyproject.toml  ruff.toml
backend/src/adapters/inbound/: __init__.py
backend/src/adapters/inbound/api/: __init__.py
backend/src/adapters/inbound/api/routers/: health.py
backend/src/bootstrap/: web_app.py
backend/tests/application/commands/handlers/: test_create_project_command_handler.py
backend/tests/domain/project/services/: test_create_project_service.py
backend/tests/domain/project/value_objects/: __init__.py  test_owner.py  test_policies.py  test_project_id.py  test_provider.py  test_repo_id.py  test_rules.py  test_url.py
docs/: glossary.md
event-storming/: whiteboard.mermaid
rules/: backend.mdc
